MB-5549 Support change_vb_filter operation without reconnection.

This change allows TAP client to change the vbucket filter
for a given TAP producer without making a reconnection to the
server.  The TAP client only needs to send the new command
CMD_CHANGE_VB_FILTER (0xb0) to the TAP producer server.

CMD_CHANGE_VB_FILTER command contains the list of vbucket ids
and their last closed checkpoint ids for a new vbucket filter
and has the following message format:

|header|key|value|

header follows the definition from protocol_binary_request_header
defined in memcached and should have key_len and body_len.

the key is the TAP producer name and the value consists of

|# of vbuckets(uint16_t)|vb_id(uint16_t)|chk_id(uint64_t|...|

Change-Id: I40fee0941779f8e5a0fba227137eeb81c104cdd4
Reviewed-on: http://review.couchbase.org/17367
Tested-by: Jin Lim <jin@couchbase.com>
Reviewed-by: Jin Lim <jin@couchbase.com>