ep_engine.h
@@ -561,6 +561,10 @@ public:
                                             protocol_binary_request_header *request,
                                             ADD_RESPONSE response);
 
+    ENGINE_ERROR_CODE changeTapVBFilter(const void* cookie,
+                                        protocol_binary_request_header *request,
+                                        ADD_RESPONSE response);
+
     size_t getGetlDefaultTimeout() const {
         return getlDefaultTimeout;
     }
